--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         </div>
         <div class="map" id="map">
             <div class="chart__tooltip" id="chartTooltip">
-                <div class="chart__tooltip--close" id="tooltip-close">
+                <!-- <div class="chart__tooltip--close" id="tooltip-close" aria-hidden="true">
                     <img src="https://raw.githubusercontent.com/CarlosMunozDiaz/mapa_latam_tvet/main/img/close.svg" width="12" height="12" alt="Icono cerrar" title="Cerrar">
                 </div>
-                <div class="chart__tooltip--content" id="tooltip-content"></div>                
+                <div class="chart__tooltip--content" id="tooltip-content"></div>                 -->
             </div>
         </div>
         <p class="source"><span>Fuente de datos:</span> Elaboración propia</p>
